--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeb9PVTPjp8tz9SsCQijC7GPeDcASKibA"
+  type="text/javascript"></script>
   </head>
   <body>
     <div id="root"></div>
