--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Date Gen</title>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeb9PVTPjp8tz9SsCQijC7GPeDcASKibA"
   type="text/javascript"></script>
   </head>
