--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Pontano+Sans|Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
